# test_for_job

./: .dockerignore  .env_example  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements  requirements.txt  run_tests.py
Test/: models.py  settings.py  urls.py
core/: models.py  serializers.py  urls.py  utils.py  views.py
core/migrations/: 0001_initial.py  0002_rename_question_answer_question_id.py
tests/: conftest.py  test_views.py  urls.py
