[project]
name = "test"
version = "0.2.5"
package-mode = false
description = "desc"
authors = [
    {name = "I am"}
]
license = {text = "Yes"}
readme = "README.md"
requires-python = "3.13.4"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
